packages/zenoh/lib/src/bindings.dart


final class __pthread_internal_list extends ffi.Struct {
  external ffi.Pointer<__pthread_internal_list> __prev;

  external ffi.Pointer<__pthread_internal_list> __next;
}

final class __pthread_mutex_s extends ffi.Struct {
  @ffi.Int()
  external int __lock;

  @ffi.UnsignedInt()
  external int __count;

  @ffi.Int()
  external int __owner;

  @ffi.UnsignedInt()
  external int __nusers;

  @ffi.Int()
  external int __kind;

  @ffi.Short()
  external int __spins;

  @ffi.Short()
  external int __elision;

  external __pthread_internal_list __list;
}

final class __pthread_rwlock_arch_t extends ffi.Struct {
  @ffi.UnsignedInt()
  external int __readers;

  @ffi.UnsignedInt()
  external int __writers;

  @ffi.UnsignedInt()
  external int __wrphase_futex;

  @ffi.UnsignedInt()
  external int __writers_futex;

  @ffi.UnsignedInt()
  external int __pad3;

  @ffi.UnsignedInt()
  external int __pad4;

  @ffi.Int()
  external int __cur_writer;

  @ffi.Int()
  external int __shared;

  @ffi.SignedChar()
  external int __rwelision;

  @ffi.Array.multi([7])
  external ffi.Array<ffi.UnsignedChar> __pad1;

  @ffi.UnsignedLong()
  external int __pad2;

  @ffi.UnsignedInt()
  external int __flags;
}

final class __pthread_cond_s extends ffi.Struct {
  external __atomic_wide_counter __wseq;

  external __atomic_wide_counter __g1_start;

  @ffi.Array.multi([2])
  external ffi.Array<ffi.UnsignedInt> __g_refs;

  @ffi.Array.multi([2])
  external ffi.Array<ffi.UnsignedInt> __g_size;

  @ffi.UnsignedInt()
  external int __g1_orig_size;

  @ffi.UnsignedInt()
  external int __wrefs;

  @ffi.Array.multi([2])
  external ffi.Array<ffi.UnsignedInt> __g_signals;
}

final class pthread_mutexattr_t extends ffi.Union {
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Char> __size;

  @ffi.Int()
  external int __align;
}

final class pthread_condattr_t extends ffi.Union {
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Char> __size;

  @ffi.Int()
  external int __align;
}

final class pthread_attr_t extends ffi.Union {
  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __size;

  @ffi.Long()
  external int __align;
}

final class pthread_mutex_t extends ffi.Union {
  external __pthread_mutex_s __data;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __size;

  @ffi.Long()
  external int __align;
}

final class pthread_cond_t extends ffi.Union {
  external __pthread_cond_s __data;

  @ffi.Array.multi([48])
  external ffi.Array<ffi.Char> __size;

  @ffi.LongLong()
  external int __align;
}

final class pthread_rwlock_t extends ffi.Union {
  external __pthread_rwlock_arch_t __data;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __size;

  @ffi.Long()
  external int __align;
}

final class pthread_rwlockattr_t extends ffi.Union {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __size;

  @ffi.Long()
  external int __align;
}

final class pthread_barrier_t extends ffi.Union {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Char> __size;

  @ffi.Long()
  external int __align;
}

final class pthread_barrierattr_t extends ffi.Union {
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Char> __size;

  @ffi.Int()
  external int __align;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned ZShmMut slice.
final class z_owned_shm_mut_t extends ffi.Struct {
  @ffi.Array.multi([80])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned ShmProvider's PrecomputedLayout.
final class z_loaned_precomputed_layout_t extends ffi.Struct {
  @ffi.Array.multi([40])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned ShmProvider's PrecomputedLayout.
final class z_owned_precomputed_layout_t extends ffi.Struct {
  @ffi.Array.multi([40])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned ShmProvider.
final class z_loaned_shm_provider_t extends ffi.Struct {
  @ffi.Array.multi([104])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh data.
final class z_loaned_bytes_t extends ffi.Struct {
  @ffi.Array.multi([40])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned ZShm slice.
final class z_loaned_shm_t extends ffi.Struct {
  @ffi.Array.multi([80])
  external ffi.Array<ffi.Uint8> _0;
}

/// A Zenoh data.
///
/// To minimize copies and reallocations, Zenoh may provide data in several separate buffers.
final class z_owned_bytes_t extends ffi.Struct {
  @ffi.Array.multi([40])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned sequence of bytes.
final class z_loaned_slice_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned string.
final class z_loaned_string_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned ZShm slice.
final class z_owned_shm_t extends ffi.Struct {
  @ffi.Array.multi([80])
  external ffi.Array<ffi.Uint8> _0;
}

final class z_owned_slice_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

/// The wrapper type for strings allocated by Zenoh.
final class z_owned_string_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

/// A contiguous sequence of bytes owned by some other entity.
final class z_view_slice_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

/// An loaned writer for payload.
final class z_loaned_bytes_writer_t extends ffi.Struct {
  @ffi.Array.multi([64])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned writer for payload.
final class z_owned_bytes_writer_t extends ffi.Struct {
  @ffi.Array.multi([64])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A loaned cancellation token, which can be used to interrupt GET queries.
final class z_loaned_cancellation_token_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned cancellation token, which can be used to interrupt GET queries.
final class z_owned_cancellation_token_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief An owned ChunkAllocResult.
final class z_owned_chunk_alloc_result_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief A pointer in SHM Segment.
final class z_owned_ptr_in_segment_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh session.
final class z_loaned_session_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned hello message.
final class z_loaned_hello_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}

/// Loaned closure.
final class z_loaned_closure_hello_t extends ffi.Struct {
  @ffi.Size()
  external int _0;

  @ffi.Size()
  external int _1;

  @ffi.Size()
  external int _2;
}

/// @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
/// @brief Loaned closure.
final class z_loaned_closure_matching_status_t extends ffi.Struct {
  @ffi.Size()
  external int _0;

  @ffi.Size()
  external int _1;

  @ffi.Size()
  external int _2;
}

/// A loaned Zenoh query.
final class z_loaned_query_t extends ffi.Struct {
  @ffi.Array.multi([144])
  external ffi.Array<ffi.Uint8> _0;
}

/// Loaned closure.
final class z_loaned_closure_query_t extends ffi.Struct {
  @ffi.Size()
  external int _0;

  @ffi.Size()
  external int _1;

  @ffi.Size()
  external int _2;
}

/// A loaned reply.
final class z_loaned_reply_t extends ffi.Struct {
  @ffi.Array.multi([248])
  external ffi.Array<ffi.Uint8> _0;
}

/// Loaned closure.
final class z_loaned_closure_reply_t extends ffi.Struct {
  @ffi.Size()
  external int _0;

  @ffi.Size()
  external int _1;

  @ffi.Size()
  external int _2;
}

/// A loaned Zenoh sample.
final class z_loaned_sample_t extends ffi.Struct {
  @ffi.Array.multi([224])
  external ffi.Array<ffi.Uint8> _0;
}

/// Loaned closure.
final class z_loaned_closure_sample_t extends ffi.Struct {
  @ffi.Size()
  external int _0;

  @ffi.Size()
  external int _1;

  @ffi.Size()
  external int _2;
}

/// @brief A Zenoh ID.
///
/// In general, valid Zenoh IDs are LSB-first 128bit unsigned and non-zero integers.
final class z_id_t extends ffi.Struct {
  @ffi.Array.multi([16])
  external ffi.Array<ffi.Uint8> id;
}

/// @brief Loaned closure.
final class z_loaned_closure_zid_t extends ffi.Struct {
  @ffi.Size()
  external int _0;

  @ffi.Size()
  external int _1;

  @ffi.Size()
  external int _2;
}

/// An owned conditional variable.
///
/// Used in combination with `z_owned_mutex_t` to wake up thread when certain conditions are met.
final class z_owned_condvar_t extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned conditional variable.
final class z_loaned_condvar_t extends ffi.Struct {
  @ffi.Array.multi([4])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned mutex.
final class z_loaned_mutex_t extends ffi.Struct {
  @ffi.Array.multi([24])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh configuration.
final class z_owned_config_t extends ffi.Struct {
  @ffi.Array.multi([2008])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned Zenoh configuration.
final class z_loaned_config_t extends ffi.Struct {
  @ffi.Array.multi([2008])
  external ffi.Array<ffi.Uint8> _0;
}

/// A loaned key expression.
///
/// Key expressions can identify a single key or a set of keys.
///
/// Examples :
/// - ``"key/expression"``.
/// - ``"key/ex*"``.
///
/// Using `z_declare_keyexpr` allows Zenoh to optimize a key expression,
/// both for local processing and network-wise.
final class z_loaned_keyexpr_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

/// A Zenoh-allocated <a href="https://zenoh.io/docs/manual/abstractions/#key-expression"> key expression </a>.
///
/// Key expressions can identify a single key or a set of keys.
///
/// Examples :
/// - ``"key/expression"``.
/// - ``"key/ex*"``.
///
/// Key expressions can be mapped to numerical ids through `z_declare_keyexpr`
/// for wire and computation efficiency.
///
/// Internally key expressiobn can be either:
/// - A plain string expression.
/// - A pure numerical id.
/// - The combination of a numerical prefix and a string suffix.
final class z_owned_keyexpr_t extends ffi.Struct {
  @ffi.Array.multi([32])
  external ffi.Array<ffi.Uint8> _0;
}

/// An owned Zenoh <a href="https://zenoh.io/docs/manual/abstractions/#publisher"> publisher </a>.
final class z_owned_publisher_t extends ffi.Struct {
  @ffi.Array.multi([112])
  external ffi.Array<ffi.Uint8> _0;
}

/// The <a href="https://zenoh.io/docs/manual/abstractions/#encoding"> encoding </a> of Zenoh data.
final class z_owned_encoding_t extends ffi.Struct {
  @ffi.Array.multi([48])
  external ffi.Array<ffi.Uint8> _0;
}
